<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/timeSleptButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="349dp"
        android:layout_height="55dp"
        android:drawableStart="@drawable/icontime"
        android:drawableEnd="@drawable/arrowright"
        android:drawableRight="@drawable/arrowright"
        android:drawableBottom="@drawable/bottomline"
        android:drawablePadding="15dp"
        android:gravity="start|center_vertical"
        android:text="@string/view_time_slept"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264"
        />

    <Button
        android:id="@+id/concussionButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="349dp"
        android:layout_height="55dp"
        android:drawableStart="@drawable/iconconcussion"
        android:drawableEnd="@drawable/arrowright"
        android:drawableRight="@drawable/arrowright"
        android:drawableBottom="@drawable/bottomline"
        android:drawablePadding="15dp"
        android:gravity="start|center_vertical"
        android:text="@string/view_concussion_information"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747" />

    <Button
        android:id="@+id/csvButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="349dp"
        android:layout_height="55dp"
        android:drawableStart="@drawable/iconcsv"
        android:drawableEnd="@drawable/arrowright"
        android:drawableRight="@drawable/arrowright"
        android:drawableBottom="@drawable/bottomline"
        android:drawablePadding="15dp"
        android:gravity="start|center_vertical"
        android:text="@string/view_csv_sleep_file"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866" />

    <Button
        android:id="@+id/emergencyButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="349dp"
        android:layout_height="55dp"
        android:drawableStart="@drawable/iconemergency"
        android:drawableEnd="@drawable/arrowright"
        android:drawableRight="@drawable/arrowright"
        android:drawableBottom="@drawable/bottomline"
        android:drawablePadding="15dp"
        android:gravity="start|center_vertical"
        android:text="@string/view_emergency_information"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.627" />

    <Button
        android:id="@+id/tempButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="349dp"
        android:layout_height="55dp"
        android:drawableStart="@drawable/icontemp"
        android:drawableEnd="@drawable/arrowright"
        android:drawableRight="@drawable/arrowright"
        android:drawableBottom="@drawable/bottomline"
        android:drawablePadding="15dp"
        android:gravity="start|center_vertical"
        android:text="@string/view_temperature"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.387" />

    <Button
        android:id="@+id/movementButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="349dp"
        android:layout_height="55dp"
        android:drawableStart="@drawable/iconmovement"
        android:drawableEnd="@drawable/arrowright"
        android:drawableRight="@drawable/arrowright"
        android:drawableBottom="@drawable/bottomline"
        android:drawablePadding="15dp"
        android:gravity="start|center_vertical"
        android:text="@string/view_head_movement"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507" />


</androidx.constraintlayout.widget.ConstraintLayout>

